--- a/eCommerceApp.Controllers/eCommerceApp.Controllers.csproj
+++ b/eCommerceApp.Controllers/eCommerceApp.Controllers.csproj
@@ -1,16 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eCommerceApp.Common\eCommerceApp.Common.csproj" />
+    <ProjectReference Include="..\eCommerceApp.DataAccess\eCommerceApp.DataAccess.csproj" />
     <ProjectReference Include="..\eCommerceApp.Entities\eCommerceApp.Entities.csproj" />
   </ItemGroup>
 
